Archive2/8e/c3ad4a4d8bca31/output
main.cpp: In function 'int main()':
main.cpp:23:19: error: no matching function for call to 'f(std::ostream&, int)'
     f(std::cout, 1); // not OK
                   ^
main.cpp:13:6: note: candidate: template<class stream_t, class T> typename std::enable_if<(! has_cout<stream_t, T>::value)>::type f(stream_t&, const T&)
 auto f(stream_t &s, const T& x) 
      ^
main.cpp:13:6: note:   template argument deduction/substitution failed:
main.cpp: In substitution of 'template<class stream_t, class T> typename std::enable_if<(! has_cout<stream_t, T>::value)>::type f(stream_t&, const T&) [with stream_t = std::basic_ostream<char>; T = int]':
main.cpp:23:19:   required from here
main.cpp:13:6: error: no type named 'type' in 'struct std::enable_if<false, void>'
